2018-07-04  Ross Burton <ross.burton@intel.com>

	* addrscopes.c: Remove error.h include, add system.h include.
	* allregs.c: Likewise.
	* backtrace-data.c: Likewise.
	* backtrace-dwarf.c: Likewise.
	* backtrace.c: Likewise.
	* buildid.c: Likewise.
	* debugaltlink.c: Likewise.
	* debuglink.c: Likewise.
	* deleted.c : Likewise.
	* dwarfcfi.c: Likewise.
	* dwfl-addr-sect.c: Likewise.
	* dwfl-bug-addr-overflow.c: Likewise.
	* dwfl-bug-fd-leak.c: Likewise.
	* dwfl-bug-getmodules.c: Likewise.
	* dwfl-proc-attach.c: Likewise.
	* dwfl-report-elf-align.c: Likewise.
	* dwfllines.c: Likewise.
	* dwflmodtest.c: Likewise.
	* dwflsyms.c: Likewise.
	* early-offscn.c: Likewise
	* ecp.c: Likewise.
	* elfstrmerge.c: Likewise.
	* find-prologues.c: Likewise.
	* funcretval.c: Likewise.
	* funcscopes.c: Likewise.
	* getsrc_die.c: Likewise.
	* line2addr.c: Likewise.
	* low_high_pc.c: Likewise.
	* next_cfi.c: Likewise.
	* rdwrmmap.c: Likewise.
	* saridx.c: Likewise.
	* sectiondump.c: Likewise.
	* varlocs.c: Likewise.
	* vdsosyms.c: Likewise.

2018-06-28  Mark Wielaard  <mark@klomp.org>

	* next_cfi.c: New file.
	* run-next-cfi.sh: New test.
	* run-next-cfi-self.sh: Likewise.
	* Makefile.am (check_PROGRAMS): Add next_cfi.
	(TESTS): Add run-next-cfi.sh and run-next-cfi-self.sh.
	(EXTRA_DIST): Likewise.
	(next_cfi_LDADD): New variable.

2018-06-27  Mark Wielaard  <mark@klomp.org>

	* dwarf_cfi.c: New file.
	* run-dwarfcfi.sh: New test.
	* testfile11-debugframe.bz2: New testfile.
	* testfile12-debugframe.bz2: Likewise.
	* testfileaarch64-debugframe.bz2: Likewise.
	* testfilearm-debugframe.bz2: Likewise.
	* testfileppc32-debugframe.bz2: Likewise.
	* testfileppc64-debugframe.bz2: Likewise.
	* Makefile.am (check_PROGRAMS): Add dwarfcfi.
	(TESTS): Add run-dwarfcfi.sh.
	(EXTRA_DIST): Add run-dwarfcfi.sh, testfile11-debugframe.bz2,
	testfile12-debugframe.bz2, testfileaarch64-debugframe.bz2,
	testfilearm-debugframe.bz2, testfileppc32-debugframe.bz2 and
	testfileppc64-debugframe.bz2.
